# fanstasy_api

./: .env  Cargo.toml
src/: handlers.rs  main.rs  serializers.rs
src/api/: endpoint.rs
src/logger/: mod.rs  req_res_function.rs
src/models/: deserializer_struct.rs  mod.rs  serializer_struct.rs
src/repository/: database_functions.rs  mod.rs  postgres_repo.rs
