[package]
name = "fantasy_error_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
serde = { version = "1.0.104", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
serde_json = "1.0"
#sqlx = { version = "0.5", features = ["postgres", "macros", "runtime-tokio-rustls"] }
dotenv = "0.15"
reqwest = { version = "0.11.0", features = ["json"] }
chrono = "0.4"
